fixed top cutoff issue

--- a/extension/simplesearch.css
+++ b/extension/simplesearch.css
@@ -39,7 +39,7 @@
 	margin-left: -15px;
 	max-width: 80%;
 	position: absolute;
-	top: 15px;
+	top: 135px;
 	left: 50%;
 	transform: translateX(-50%);
 	display: flex;
